--- a/local.ipynb
+++ b/local.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,6 +47,233 @@
     "        print(f\"Failed to download file {response.status_code}\")\n",
     "else:\n",
     "    print(f\"file {pdf_path} exists\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import fitz  # Ensure this import is at the top\n",
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "def text_formatter(text: str) -> str:\n",
+    "    cleaned_text = text.replace('\\n', \" \").strip()\n",
+    "    return cleaned_text\n",
+    "\n",
+    "def open_and_read_pdf(pdf_path: str) -> list[dict]:\n",
+    "    doc = fitz.open(pdf_path)\n",
+    "    pages_and_text = []\n",
+    "    for page_number, page in tqdm(enumerate(doc)):  \n",
+    "        text = page.get_text()\n",
+    "        text = text_formatter(text=text)\n",
+    "        pages_and_text.append({\n",
+    "            \"page_number\": page_number-41,  # Corrected page numbering\n",
+    "            \"page_char_count\": len(text),\n",
+    "            \"page_word_count\": len(text.split(\" \")),\n",
+    "            \"page_sentence_count_raw\": len(text.split(\". \")),\n",
+    "            \"page_token_count\": len(text)/4,  # Assuming tokens are words; corrected calculation\n",
+    "            \"text\": text\n",
+    "        })\n",
+    "\n",
+    "    return pages_and_text\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dac9da78dee84d039cfd5b110c9fb828",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'page_number': -41,\n",
+       "  'page_char_count': 29,\n",
+       "  'page_word_count': 4,\n",
+       "  'page_sentence_count_raw': 1,\n",
+       "  'page_token_count': 7.25,\n",
+       "  'text': 'Human Nutrition: 2020 Edition'},\n",
+       " {'page_number': -40,\n",
+       "  'page_char_count': 0,\n",
+       "  'page_word_count': 1,\n",
+       "  'page_sentence_count_raw': 1,\n",
+       "  'page_token_count': 0.0,\n",
+       "  'text': ''}]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pages_and_texts  = open_and_read_pdf(pdf_path=pdf_path)\n",
+    "pages_and_texts[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'page_number': 457,\n",
+       "  'page_char_count': 1597,\n",
+       "  'page_word_count': 271,\n",
+       "  'page_sentence_count_raw': 15,\n",
+       "  'page_token_count': 399.25,\n",
+       "  'text': 'details on food composition data, go to the USDA Food Composition  Databases page.  An Organism Requires Energy and Nutrient  Input  Energy is required in order to build molecules into larger  macromolecules (like proteins), and to turn macromolecules into  organelles and cells, which then turn into tissues, organs, and organ  systems, and finally into an organism. Proper nutrition provides  the necessary nutrients to make the energy that supports life’s  processes. Your body builds new macromolecules from the  nutrients in food.  Nutrient and Energy Flow  Energy is stored in a nutrient’s chemical bonds. Energy comes from  sunlight, which plants capture and, via photosynthesis, use it to  transform carbon dioxide in the air into the molecule glucose. When  the glucose bonds are broken, energy is released. Bacteria, plants,  and animals (including humans) harvest the energy in glucose via a  biological process called cellular respiration. In this process oxygen  is required and the chemical energy of glucose is gradually released  in a series of chemical reactions. Some of this energy is trapped  in the molecule adenosine triphosphate (ATP) and some is lost as  heat. ATP can be used when needed to drive chemical reactions in  cells that require an input of energy. Cellular respiration requires  oxygen (aerobic) and it is provided as a byproduct of photosynthesis.  The byproducts of cellular respiration are carbon dioxide (CO2) and  water, which plants use to conduct photosynthesis again. Thus,  carbon is constantly cycling between plants and animals.  Introduction  |  457'},\n",
+       " {'page_number': 644,\n",
+       "  'page_char_count': 493,\n",
+       "  'page_word_count': 83,\n",
+       "  'page_sentence_count_raw': 4,\n",
+       "  'page_token_count': 123.25,\n",
+       "  'text': 'downloadable versions (EPUB, Digital PDF, Print_PDF, or  Open Document).  Learning activities may be used across various mobile  devices, however, for the best user experience it is strongly  recommended that users complete these activities using a  desktop or laptop computer and in Google Chrome.  \\xa0 An interactive or media element has been  excluded from this version of the text. You can  view it online here:  http:/ /pressbooks.oer.hawaii.edu/ humannutrition2/?p=370  \\xa0 644  |  Magnesium'},\n",
+       " {'page_number': 471,\n",
+       "  'page_char_count': 97,\n",
+       "  'page_word_count': 15,\n",
+       "  'page_sentence_count_raw': 1,\n",
+       "  'page_token_count': 24.25,\n",
+       "  'text': 'view it online here:  http:/ /pressbooks.oer.hawaii.edu/ humannutrition2/?p=301  The Atom  |  471'}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random \n",
+    "random.sample(pages_and_texts,k=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>page_number</th>\n",
+       "      <th>page_char_count</th>\n",
+       "      <th>page_word_count</th>\n",
+       "      <th>page_sentence_count_raw</th>\n",
+       "      <th>page_token_count</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-41</td>\n",
+       "      <td>29</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.25</td>\n",
+       "      <td>Human Nutrition: 2020 Edition</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-39</td>\n",
+       "      <td>320</td>\n",
+       "      <td>54</td>\n",
+       "      <td>1</td>\n",
+       "      <td>80.00</td>\n",
+       "      <td>Human Nutrition: 2020  Edition  UNIVERSITY OF ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-38</td>\n",
+       "      <td>212</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1</td>\n",
+       "      <td>53.00</td>\n",
+       "      <td>Human Nutrition: 2020 Edition by University of...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-37</td>\n",
+       "      <td>797</td>\n",
+       "      <td>145</td>\n",
+       "      <td>2</td>\n",
+       "      <td>199.25</td>\n",
+       "      <td>Contents  Preface  University of Hawai‘i at Mā...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   page_number  page_char_count  page_word_count  page_sentence_count_raw  \\\n",
+       "0          -41               29                4                        1   \n",
+       "1          -40                0                1                        1   \n",
+       "2          -39              320               54                        1   \n",
+       "3          -38              212               32                        1   \n",
+       "4          -37              797              145                        2   \n",
+       "\n",
+       "   page_token_count                                               text  \n",
+       "0              7.25                      Human Nutrition: 2020 Edition  \n",
+       "1              0.00                                                     \n",
+       "2             80.00  Human Nutrition: 2020  Edition  UNIVERSITY OF ...  \n",
+       "3             53.00  Human Nutrition: 2020 Edition by University of...  \n",
+       "4            199.25  Contents  Preface  University of Hawai‘i at Mā...  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "df=pd.DataFrame(pages_and_texts)\n",
+    "df.head()"
    ]
   },
   {
