--- a/local.ipynb
+++ b/local.ipynb
@@ -277,6 +277,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Token Count \n",
+    "1. Emebdding model dont deal in infinite token \n",
+    "2. LLM dont deal wiht infite token \n",
+    "\n",
+    "Some embedding model may been trained to embed seqence of 384 token into numerical space. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
