--- a/local.ipynb
+++ b/local.ipynb
@@ -288,11 +288,342 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Splitting pages into sentence\n",
+    "\n",
+    "1. we can do this by splitting on \". \"\n",
+    "2. we can use nlp libraries like spacy  and nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object at 0x178ea2e60>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from spacy.lang.en import English \n",
+    "nlp = English()\n",
+    "\n",
+    "# Add a sentenizer pipeline \n",
+    "nlp.add_pipe(\"sentencizer\")\n",
+    "# document instance \n",
+    "doc = nlp (\"This is a sentence, This is antoher sentence. I like elephant\")\n",
+    "# assert len(list(doc.sents))  ==3 \n",
+    "\n",
+    "print(doc.sents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a sentence.\n",
+      "This is another sentence.\n",
+      "I like elephants.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from spacy.lang.en import English \n",
+    "nlp = English()\n",
+    "\n",
+    "# sentencizer pipeline \n",
+    "nlp.add_pipe(\"sentencizer\")\n",
+    "# document instance \n",
+    "doc = nlp(\"This is a sentence. This is another sentence. I like elephants.\")\n",
+    "assert len(list(doc.sents)) == 3 \n",
+    "\n",
+    "# print(doc.sents)\n",
+    "for sent in doc.sents:\n",
+    "    print(sent.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'page_number': 1159,\n",
+       " 'page_char_count': 1575,\n",
+       " 'page_word_count': 285,\n",
+       " 'page_sentence_count_raw': 14,\n",
+       " 'page_token_count': 393.75,\n",
+       " 'text': '32. Figure 15.2 reused “Two Women Riding Bikes” by David Marcu/  Unsplash License  33. Figure 15. reused “Man wearing blue shirt standing on white  surfboard” by Alex Blajan / Unsplash License  34. Figure 16.3 Anaerobic versus Aerobic Metabolism by Allison  Calabrese / CC BY 4.0  35. Figure 16.4 The Effect of Exercise Duration on Energy Systems”  by Allison Calabrese / CC BY 4.0  36. Figure 16.5 “Fuel Sources for Anaerobic and Aerobic  Metabolism reused “Liver” by Maritacovarrubias / Public  Domain; “Bread” by Jack7 / Public Domain; “Muscle types” by  Bruce Balus / CC BY-SA 4.0; “Tango style chicken leg” by  Rugby471 / Public Domain; “Male body silhouette” by mlampret  / Public Domain  37. Figure 16.6 The Effect of Exercise Intensity on Fuel Sources  reused “Happy reading guy” from Max Pixel / CC0; “Surfers  surfing waters” by hhach / CC0; “Football runner ball” by  Skeeze / CC0  38. Figure 16.7 Relative Energy Deficiency in Sport Effects reused  woman running icon by chelsey832 / Public Domain; Full  english breakfast by OgreofWart / Public Domain  39. Figure 16.11 The Effect of Exercise on Sodium Levels reused  male body silhouette by mlampret / Public Domain  40. Figure 17.1 Viruses in the Human Body reused “Simple columnar  epithelial cells” by McortNGHH / CC BY 3.0  Exercise Images  1. Exercise 2.1 reused “Digestive system without labels” by  Mariana Ruiz / Public Domain  2. Exercise 2.2a reused “Major Endocrine Glands” by National  Cancer Institute / Public Domain  3. Exercise 2.2a reused “Simplified diagram of the human  Attributions  |  1159'}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pages_and_texts[1200]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "58d2a199967a49929ace0b7d61657ad0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1208 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "for item in tqdm(pages_and_texts):\n",
+    "    item['sentences'] = list(nlp(item['text']).sents)\n",
+    "    \n",
+    "    # all sentences are strings \n",
+    "    item['sentences'] = [str(sentence) for sentence in item['sentences']]\n",
+    "\n",
+    "    # count sentences \n",
+    "    item['page_sentence_count_spacy'] = len(item['sentences'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'page_number': 59,\n",
+       "  'page_char_count': 629,\n",
+       "  'page_word_count': 109,\n",
+       "  'page_sentence_count_raw': 4,\n",
+       "  'page_token_count': 157.25,\n",
+       "  'text': 'Digestive  system  without  labels by  Mariana  Ruiz / Public  Domain  Knowing how to maintain the balance of friendly bacteria in your  intestines through proper diet can promote overall health. Recent  scientific studies have shown that probiotic supplements positively  affect intestinal microbial flora, which in turn positively affect  immune system function. As good nutrition is known to influence  immunity, there is great interest in using probiotic foods and other  immune-system-friendly foods as a way to prevent illness. In this  chapter we will explore not only immune system function, but also  Introduction  |  59',\n",
+       "  'sentences': ['Digestive  system  without  labels by  Mariana  Ruiz / Public  Domain  Knowing how to maintain the balance of friendly bacteria in your  intestines through proper diet can promote overall health.',\n",
+       "   'Recent  scientific studies have shown that probiotic supplements positively  affect intestinal microbial flora, which in turn positively affect  immune system function.',\n",
+       "   'As good nutrition is known to influence  immunity, there is great interest in using probiotic foods and other  immune-system-friendly foods as a way to prevent illness.',\n",
+       "   'In this  chapter we will explore not only immune system function, but also  Introduction  |  59'],\n",
+       "  'page_sentence_count_spacy': 4}]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.sample(pages_and_texts,k=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>page_number</th>\n",
+       "      <th>page_char_count</th>\n",
+       "      <th>page_word_count</th>\n",
+       "      <th>page_sentence_count_raw</th>\n",
+       "      <th>page_token_count</th>\n",
+       "      <th>page_sentence_count_spacy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1208.00</td>\n",
+       "      <td>1208.00</td>\n",
+       "      <td>1208.00</td>\n",
+       "      <td>1208.00</td>\n",
+       "      <td>1208.00</td>\n",
+       "      <td>1208.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>562.50</td>\n",
+       "      <td>1148.59</td>\n",
+       "      <td>198.89</td>\n",
+       "      <td>9.97</td>\n",
+       "      <td>287.15</td>\n",
+       "      <td>10.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>348.86</td>\n",
+       "      <td>560.44</td>\n",
+       "      <td>95.75</td>\n",
+       "      <td>6.19</td>\n",
+       "      <td>140.11</td>\n",
+       "      <td>6.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-41.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>260.75</td>\n",
+       "      <td>762.75</td>\n",
+       "      <td>134.00</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>190.69</td>\n",
+       "      <td>5.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>562.50</td>\n",
+       "      <td>1232.50</td>\n",
+       "      <td>215.00</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>308.12</td>\n",
+       "      <td>10.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>864.25</td>\n",
+       "      <td>1605.25</td>\n",
+       "      <td>271.25</td>\n",
+       "      <td>14.00</td>\n",
+       "      <td>401.31</td>\n",
+       "      <td>15.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1166.00</td>\n",
+       "      <td>2308.00</td>\n",
+       "      <td>429.00</td>\n",
+       "      <td>32.00</td>\n",
+       "      <td>577.00</td>\n",
+       "      <td>28.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       page_number  page_char_count  page_word_count  page_sentence_count_raw  \\\n",
+       "count      1208.00          1208.00          1208.00                  1208.00   \n",
+       "mean        562.50          1148.59           198.89                     9.97   \n",
+       "std         348.86           560.44            95.75                     6.19   \n",
+       "min         -41.00             0.00             1.00                     1.00   \n",
+       "25%         260.75           762.75           134.00                     4.00   \n",
+       "50%         562.50          1232.50           215.00                    10.00   \n",
+       "75%         864.25          1605.25           271.25                    14.00   \n",
+       "max        1166.00          2308.00           429.00                    32.00   \n",
+       "\n",
+       "       page_token_count  page_sentence_count_spacy  \n",
+       "count           1208.00                    1208.00  \n",
+       "mean             287.15                      10.32  \n",
+       "std              140.11                       6.30  \n",
+       "min                0.00                       0.00  \n",
+       "25%              190.69                       5.00  \n",
+       "50%              308.12                      10.00  \n",
+       "75%              401.31                      15.00  \n",
+       "max              577.00                      28.00  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(pages_and_texts)\n",
+    "df.describe().round(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Chunking sentence in group of 10(arbitary number)(based on page_setence_count_spacy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose of Chunking \n",
+    "1. Text are easier to filter(incase of debugging)\n",
+    "2. Text can fit into our Embedding model context window( 384 token as limit)\n",
+    "3. LLM can be more focussed and specif\n",
+    "\n",
+    "e.,g ->\n",
+    "[20] ->[10,10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_sentence_chunk_size=10 \n",
+    "\n",
+    "\n",
+    "def split_list(input_list:list[str],\n",
+    "               slice_size:int = num_sentence_chunk_size) -> list[list[str]]:\n",
+    "    return [input_list[i:i+split_size] for i in range(0,len(input_list),slice_size)]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "list(range(25))"
+   ]
   }
  ],
  "metadata": {
