--- a/local.ipynb
+++ b/local.ipynb
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,31 @@
     "\n",
     "def split_list(input_list:list[str],\n",
     "               slice_size:int = num_sentence_chunk_size) -> list[list[str]]:\n",
-    "    return [input_list[i:i+split_size] for i in range(0,len(input_list),slice_size)]"
+    "    return [input_list[i:i+slice_size] for i in range(0,len(input_list),slice_size)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+       " [10, 11, 12, 13, 14, 15, 16, 17, 18, 19],\n",
+       " [20, 21, 22, 23, 24]]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# run a sample list\n",
+    "test_list = list(range(25))\n",
+    "split_list(test_list)"
    ]
   },
   {
@@ -621,9 +645,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "list(range(25))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
